new_tests/semantics/scope/bad/019_BE1.cm

def a:Int = 5

3 instanceof a 
